base/vapi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vapi
  namespace: vapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vapi
  template:
    metadata:
      labels:
        app: vapi
    spec:
      containers:
        - name: vapi
          image: roottusk/vapi:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /vapi
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
