base/vapi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vapi
  namespace: vapi
spec:
  selector:
    app: vapi
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vapi-db
  namespace: vapi
spec:
  selector:
    app: vapi-db
  ports:
    - port: 3306
      targetPort: 3306
